# webwhen

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  helmfile.yaml.gotmpl  justfile  manifest  plugin.json
.beads/: issues.jsonl
.claude-plugin/: marketplace.json
.github/workflows/: backend-pr.yml  production.yml  publish-pypi.yml  staging.yml
backend/: Dockerfile  pyproject.toml  run_api.py  test_email.py  test_webhook.py
backend/alembic/: env.py
backend/examples/: api_key_usage.py
backend/scripts/: manual_email_test.py
backend/src/torale/: __init__.py
backend/src/torale/api/: main.py
backend/src/torale/api/routers/: connectors.py  sitemap.py
backend/src/torale/core/: config.py
backend/src/torale/notifications/: webhook.py
backend/src/torale/sdk/: __init__.py
backend/src/webwhen/: __init__.py
backend/src/webwhen/access/: __init__.py  auth.py  auth_provider.py  clerk_auth.py  models.py  repository.py
backend/src/webwhen/api/: main.py  rate_limiter.py
backend/src/webwhen/api/routers/: admin.py  auth.py  connectors.py  email_verification.py  notifications.py  og.py  public_tasks.py  sitemap.py  tasks.py  templates.py  waitlist.py  webhooks.py
backend/src/webwhen/api/utils/: task_parsers.py
backend/src/webwhen/connectors/: __init__.py  client.py  registry.py
backend/src/webwhen/core/: config.py  database.py  env.py  models.py  redis.py  state_utils.py  views.py
backend/src/webwhen/lib/: posthog.py
backend/src/webwhen/notifications/: __init__.py  email.py  novu_service.py  webhook.py
backend/src/webwhen/repositories/: __init__.py  base.py  email_verification.py  tables.py  task_template.py  waitlist.py  webhook.py
backend/src/webwhen/scheduler/: __init__.py  activities.py  agent.py  connector_resolution.py  errors.py  history.py  job.py  migrate.py  models.py  prompt_sanitizer.py  scheduler.py
backend/src/webwhen/sdk/: __init__.py  async_client.py  builders.py  client.py  exceptions.py
backend/src/webwhen/sdk/resources/: __init__.py  async_tasks.py  async_webhooks.py  tasks.py  webhooks.py
backend/src/webwhen/tasks/: __init__.py  repository.py  service.py  tasks.py
backend/src/webwhen/utils/: __init__.py  jsonb.py
backend/static/: changelog.json
backend/tests/: conftest.py  test_429_fallback.py  test_activities.py  test_admin_endpoints.py  test_agent.py  test_email_verification.py  test_email_verification_endpoints.py  test_errors.py  test_feed_endpoints.py  test_job.py  test_manual_run_coordination.py  test_migrate.py  test_novu_service.py  test_prompt_sanitizer.py  test_retry_execution_id.py  test_scheduler.py  test_sdk_integration.py  test_shareable_tasks.py  test_sitemap_host_discrimination.py  test_task_service.py  test_user_repository.py  test_views.py  test_webhook.py  test_webhook_endpoints.py
design/webwhen/: README.md  colors_and_type.css  motion.css
docs-site/: 404.md  index.md  nginx.conf  package-lock.json  package.json
docs-site/.vitepress/: config.ts  redirects.ts
docs-site/api/: authentication.md  errors.md  executions.md  index.md  notifications.md  overview.md  tasks.md
docs-site/architecture/: connectors-trust.md  grounded-search.md  self-scheduling-agents.md  task-state-machine.md
docs-site/getting-started/: index.md  sdk.md
docs-site/integrations/: openclaw.md
docs-site/public/: robots.txt
docs-site/sdk/: async.md  authentication.md  errors.md  examples.md  index.md  installation.md  quickstart.md  tasks.md
frontend/: .gitignore  CSP-AUDIT.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/scripts/: generate-sitemap.mjs  prerender.mjs  sync-changelog-fixture.mjs  sync-landing-examples.mjs
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html
torale-agent/: models.py  prompts.py  pyproject.toml
(+158 files in other folders)
