[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torale-agent"
version = "0.1.0"
description = "Torale monitoring agent"
requires-python = ">=3.11"
dependencies = [
    "a2a-sdk[http-server]>=0.3.22",
    "pydantic-ai-slim[google,mcp]>=0.2.0",
    "mem0ai>=2.0.0b2",
    "perplexityai>=0.27.0",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.34.0",
    "logfire>=4.21.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "parallel-web>=0.4.1",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.1.0",
    "ty",
]
eval = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic-evals>=0.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
torale-agent = "cli:app"
